@startuml "Class Diagram"


class Admin <<Entity>> {
    + moderateComments() 
}


interface Shopping {

}
class Admin << Entity >> {
    + name : String
    + password : String
    + email : String
    + ViewCustomers()
    + ViewOrders()
    + Delete()
    + Passive()
}

class Customer <<Entity>> {
    +name: String
    +email: String
    +password: String 
    +phone: Number
    +address: String
    +creditCards: CreditCard[]
    +bookings: booking[]
    +Book()
    +Update()
    +Delete()
    +PlaceOrder()
    +CancelBooking()
    +FindProduct()
}
class Seller <<Entity>> {
    +name: String
    +email: String
    +phone: Number
    +product: String
    +address: String
    +creditCards: CreditCard[]
    +Search()
    +Add()
    +Delete()
}


class Products <<Entity>> {
    + name: String
    + brand: String
    + photo: String
    + notes: String
    + commit: String
    + piece: Number
    + available: Number 
    + size: Number
    + Evaluation: Number
    + comment: String
}

class Category << Entity >> {
    + name : String
}

class Basket << Entity >> {
    + products : products[]
    + products_piece : products_piece[]
    + notes : String
    + status : Number
}

class Order << Entity >> { 
    + basketid: Number
    + date: Date
}

Products --|> Shopping
Customer -left-o Admin
Seller -left-o Admin
Products -up-* Seller
Products *-up- Category
Customer --* Basket
Basket --* Order

@enduml